<resources>
    <!-- General -->
    <string name="app_name">Crazy converter</string>
    <string name="author">Aurelijus Pošius</string>

    <!-- Buttons -->
    <string name="button_convert">Convert</string>
    <string name="button_reset">Reset</string>

    <!-- Text fields -->
    <string name="text_km">Kilometre</string>
    <string name="text_cm">Centimetre</string>
    <string name="text_mile">Mile</string>
    <string name="text_yard">Yard</string>
    <string name="text_feet">Feet</string>

    <!-- Hints -->
    <string name="input_hint">Input number (cm)</string>

    <!-- Custom -->
    <string name="text_result_empty">00.00</string>

</resources>
